2007-06-11  Tor Lillqvist  <tml@novell.com>

	* glib/gwin32.c (g_win32_get_package_installation_directory)
	(g_win32_get_package_installation_subdirectory): Update doc
	comments. Mention that it is not recommeded to use the Registry
	features.

2007-06-06  Tor Lillqvist  <tml@novell.com>

	* glib/gutils.c: Add definitions for more CSIDL_* constants in
	case missing from headers. Use CSIDL_PERSONAL instead of
	CSIDL_MYDOCUMENTS as CSIDL_MYDOCUMENTS seems to be a new thing
	that doesn't work in XP SP2 even.

2007-06-06  Matthias Clasen  <mclasen@redhat.com>

	* glib/gutils.c (g_get_user_special_dir): Fall back to
	$HOME/Desktop for the DESKTOP directory, like 
	xdg_user_dir_lookup() does.

2007-06-05  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.13.4 ===

	* NEWS: Updates

2007-06-05  Matthias Clasen  <mclasen@redhat.com>

	* glib/gkeyfile.c (g_key_file_is_key_name):
	(g_key_file_is_group_name): Don't assume the string is
	valid UTF-8, since it may be user data.  (#444161, Ben Combee)

2007-06-05  Behdad Esfahbod  <behdad@gnome.org>

	* glib/gutf8.c: Add not to g_utf8_get_char_validated() about
	nul-terminated strings.

2007-06-05  Matthias Clasen  <mclasen@redhat.com>

	* glib/gutils.c (g_get_user_special_dir): Don't deadlock
	when running with threads.  (#444121, Christian Persch)

2007-06-05  Vincent Untz  <vuntz@gnome.org>

	* glib/goption.c: (g_option_context_get_help): don't replace the usage
	line with the description for optional parameters, but append the
	description. (#444130)

2007-06-04  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version
	
	* === Released 2.13.3 ===

	* NEWS: Updates

2007-06-04  Matthias Clasen  <mclasen@redhat.com>
	
	Add support for a number of special directories, as 
	defined by the xdg-user-dirs specification.  (#432651,
	Bastien Nocera, Emmanuele Bassi, Michael Natterer)

	* glib/glib.symbols:
	* glib/gutils.[hc]: Add the GUserDirectory enum and