@@ -1,3 +1,11 @@
+2007-06-11  Emmanuele Bassi  <ebassi@gnome.org>
+
+	* glib/gutils.c (maybe_expire_user_special_dirs),
+	(g_get_user_special_dir): Remove the cache expiration logic: it
+	makes g_get_user_special_dir() not thread-safe. Document the fact
+	that on some platform the value might be changed by the user and
+	that GLib won't be able to reflect the change.
+
 2007-06-11  Tor Lillqvist  <tml@novell.com>
 
 	* glib/gwin32.c (g_win32_get_package_installation_directory)
